# Docling_Parser_System

./: .env.example  .gitignore  DataFlow.md  Execution.md  README.md  alembic.ini  pyproject.toml
apps/: README.md
apps/api/: pyproject.toml
apps/api/fermdocs_api/: __init__.py  main.py  runner_pipeline.py  state.py
apps/api/tests/: test_api_offline.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
docs/: architecture.md  hypothesis_specialists.md
docs/design/: 2026-05-03-pdf-document-segmentation.md
evals/diagnosis/: README.md  run_evals.py
evals/identity_extractor/: run_evals.py
manifests/: ecoli_iptg_batch.yaml  penicillin_indpensim.yaml  yeast_ethanol_batch.yaml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_backfill_via_field.py  0003_add_section_to_locator.py  0004_add_schema_version.py
plans/: 2026-05-01-identity-and-agent-context.md  2026-05-02-diagnosis-agent.md  2026-05-02-execute-python-default.md  2026-05-03-hypothesis-debate-v0.md  2026-05-03-narrative-insight-extraction.md  2026-05-03-process-priors.md
scripts/: build_indpensim_bundle.py  check_audit_invariant.py  check_hypothesis_invariants.py  eval_hypothesis_reliability.py
src/fermdocs/: __init__.py  __main__.py  cli.py  dossier.py  pipeline.py
src/fermdocs_characterize/: __init__.py  agent_context.py  cli.py  flags.py  langgraph_node.py  pipeline.py  schema.py  specs.py
src/fermdocs_diagnose/: __init__.py  agent.py  cli.py  llm_clients.py  renderers.py  schema.py  tools.py  validators.py
src/fermdocs_hypothesis/: __init__.py  budget.py  bundle_loader.py  cli.py  cli_stage2.py  event_log.py  events.py  instrumentation.py  live_hooks.py  llm_clients.py  memory.py  projector.py  prompts.py  ranker.py  runner.py  schema.py  seed_topic_extractor.py  state.py  validators.py
tests/characterize/: conftest.py  test_fixtures_integration.py  test_id_stability.py  test_provenance_integrity.py  test_range_violation_unit.py  test_schema_version_invalidation.py
tests/fixtures/: sample_run.csv
tests/unit/: test_agent_context.py  (+54 more)
(+150 files in other folders)
