[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fermdocs-api"
version = "0.1.0"
description = "FastAPI backend for the fermdocs hypothesis stage frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.5",
    "fermdocs",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.26",
    "websockets>=12.0",
]

[project.scripts]
fermdocs-api = "fermdocs_api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["fermdocs_api"]
